[Task22] Get leave requests by period